--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 <h1>Hey Gabe, Lets Make a TYPING GAME</h1>
 <canvas id="myCanvas" width="1088" height="736"></canvas>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type='text/javascript'></script>
+<script src="/nodeScripts/js-cookie/src/js.cookie.js"></script>
 <script src="game/notWildWestGame.js"></script>
 
 <h2>How To</h2>
